--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -6,7 +6,7 @@ env:
   SERVER_NAME: sqlserver7cu6grksc6oi6
 jobs:
   build-and-deploy:
-    runs-on: simpleLinuxVM
+    runs-on: self-hosted
     steps:
 
       # Checkout code
