--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -22,8 +22,8 @@ jobs:
 
         cd msdocs-app-service-sqldb-dotnetcore
   
-        remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}}) --query scmUri -o tsv)
-        remote_url_final=echo $remote_url | sed 's|//\$|//\\$|'
+        remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
+        remote_url_final=$(echo $remote_url | sed -e 's|//\$|//\\$|')
         git remote add azure $remote_url_final
         git push azure main:master
 
