--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -18,9 +18,11 @@ jobs:
 
     - name: install app and db schema
       run: |
-        az configure --defaults group={{ secrets.AZURE_RG }}
+        # az configure --defaults group={{ secrets.AZURE_RG }}
 
-        cd msdocs-app-service-sqldb-dotnetcore
+        az config set defaults.location=eastus defaults.group=lazard-rg
+
+        cd /home/ahmedbham/msdocs-app-service-sqldb-dotnetcore
   
         remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
         remote_url_final=$(echo $remote_url | sed -e 's|//\$|//\\$|')
