--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -23,8 +23,11 @@ jobs:
         az config set defaults.location=eastus defaults.group=lazard-rg
 
         cd /home/ahmedbham/msdocs-app-service-sqldb-dotnetcore
+        echo `pwd`
+        echo $(az account show)
   
-        remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
+        # remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
+        remote_url=$(az webapp deployment list-publishing-credentials --name feweb-7cu6grksc6oi6 --query scmUri -o tsv)
         remote_url_final=$(echo $remote_url | sed -e 's|//\$|//\\$|')
         git remote add azure $remote_url_final
         git push azure main:master
