--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -29,7 +29,12 @@ jobs:
         # remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
         remote_url=$(az webapp deployment list-publishing-credentials --name feweb-7cu6grksc6oi6 --query scmUri -o tsv)
         remote_url_final=$(echo $remote_url | sed -e 's|//\$|//\\$|')
-        git remote add azure $remote_url_final
+
+        git_remote=$(git remote show | grep azure)
+        if [ -n "$git_remote" ]; then
+          git remote add azure $remote_url_final
+        fi;  
+        
         git push azure main:master
 
         connection_string=$(az sql db show-connection-string --client ado.net --name {{env.DB_NAME}} --server {{env.SERVER_NAME}})
