--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -23,18 +23,22 @@ jobs:
         az config set defaults.location=eastus defaults.group=lazard-rg
 
         cd /home/ahmedbham/msdocs-app-service-sqldb-dotnetcore
-        echo `pwd`
-        echo $(az account show)
+        # echo `pwd`
+        # echo $(az account show)
   
         # remote_url=$(az webapp deployment list-publishing-credentials --name {{env.APP_NAME}} --query scmUri -o tsv)
         remote_url=$(az webapp deployment list-publishing-credentials --name feweb-7cu6grksc6oi6 --query scmUri -o tsv)
         remote_url_final=$(echo $remote_url | sed -e 's|//\$|//\\$|')
+        echo "remote url $remote_url_final"
 
-        git_remote=$(git remote show | grep azure)
+        git_remote=$(git remote show | grep "azure")
+        echo "git remote $git_remote"
         if [ -n "$git_remote" ]; then
+          echo "git remote add azure"
           git remote add azure $remote_url_final
         fi;  
-        
+
+        echo "git push azure"
         git push azure main:master
 
         connection_string=$(az sql db show-connection-string --client ado.net --name {{env.DB_NAME}} --server {{env.SERVER_NAME}})
