--- a/.github/workflows/install-webapp-workflow.yaml
+++ b/.github/workflows/install-webapp-workflow.yaml
@@ -53,5 +53,5 @@ jobs:
         tmp=$(mktemp)
         jq --arg a "$MyDbConnection" '.ConnectionStrings.MyDbConnection = $a' appsettings.json > "$tmp" && mv "$tmp" appsettings.json
 
-        dotnet ef migrations add InitialCreate
+        dotnet ef migrations add InitialCreate2
         dotnet ef database update
